apps/mosquitto/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-mqtt
spec:
  type: NodePort
  selector:
    app: mosquitto
  ports:
  - port: 1883
    targetPort: 1883
    nodePort: 31883
    name: mqtt
    protocol: TCP
