apps/mosquitto/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - mqtt.picturo.us
    secretName: mosquitto-certs
  rules:
  - host: mqtt.picturo.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mosquitto-ws
            port: 
              number: 8883
